fix: update .eslintrc.js for React TypeScript support and demonstrate user CRUD operations in App.jsx

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.container {
+  margin-left: 5em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  margin-bottom: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+li {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.user-info {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-container {
+  flex: 3;
+}
+
+button {
+  align-self: flex-start;
+}
+
+.add-button {
+  margin-left: 20em;
 }
